Add samples to demo

--- a/test/fixtures/artists.yml
+++ b/test/fixtures/artists.yml
@@ -7,3 +7,14 @@ one:
 two:
   name: MyString
   age: 1
+
+# == Schema Information
+#
+# Table name: artists
+#
+#  id         :integer          not null, primary key
+#  name       :string
+#  age        :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
