--- a/test/fixtures/albums.yml
+++ b/test/fixtures/albums.yml
@@ -5,3 +5,13 @@ one:
 
 two:
   title: MyString
+
+# == Schema Information
+#
+# Table name: albums
+#
+#  id         :integer          not null, primary key
+#  title      :string
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
