--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,3 +5,13 @@ one:
 
 two:
   name: MyString
+
+# == Schema Information
+#
+# Table name: users
+#
+#  id         :integer          not null, primary key
+#  name       :string
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
